<resources>
    <string name="app_name">Basketball Warm Ups</string>
    <string name="warm_ups">WARM UPS</string>
    <string name="todo">TODO</string>
    <string name="w_a_r_m_u_p_s">W A R M  U P S</string>
    <string name="settngs">Settngs</string>
    <string name="cavite_state_university">CAVITE STATE UNIVERSITY</string>
    <string name="basketball_warm_ups">BASKETBALL WARM UPS</string>
    <string name="description">buttonsetting</string>
    <string name="settings">Settings</string>
    <string name="warm_upss">Warm Ups</string>
    <string name="featured_exercise">Featured Exercises</string>
    <string name="categories">Categories</string>
    <string name="dynamicbutton">DynamicButton</string>
    <string name="whole_body_dynamic">Whole Body (Dynamic)</string>
    <string name="in_place">In Place</string>
    <string name="with_ball">With Ball</string>
    <string name="stretching">Stretching</string>
    <string name="title_activity_whole_body_dynamic">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startTextButton">Start</string>
    <string name="resetTextButton">Reset</string>
    <string name="timerNumber">TextView</string>
    <string name="arm_circles_title">Arm Circles</string>
    <string name="arm_stretch_left_arm_title">Arm Stretch (Left Arm)</string>
    <string name="arm_stretch_right_arm_title">Arm Stretch (Right Arm)</string>
    <string name="butt_kicks_title">Butt Kicks</string>
    <string name="frankenstein_march_title">Frankenstein March</string>
    <string name="glute_walk_title">Glute Walk</string>
    <string name="inchworm_title">Inchworm</string>
    <string name="jumping_jacks_title">Jumping Jacks</string>
    <string name="knee_hugs_left_knee_title">Knee Hugs (Left Knee)</string>
    <string name="knee_hugs_right_knee_title">Knee Hugs (Right Knee)</string>
    <string name="knee_stretch_left_knee_title">Knee Stretch (Left Knee)</string>
    <string name="knee_stretch_left_knee2_title">Knee Stretch (Right Knee)</string>
    <string name="lunges_title">Lunges</string>
    <string name="push_ups_title">Push Ups</string>
    <string name="side_slide_title">Side Slide</string>
    <string name="squats_title">Squats</string>
    <string name="walking_high_knees_title">Walking High Knees</string>
    <string name="walking_lunge_with_rotation_title">Walking Lunge with Rotation</string>
    <string name="in_place_title">In Place</string>
    <string name="next_warm_up">Next Warm Up:</string>
    <string name="button">button</string>
    <string name="imagebutton" />
    <string name="imageButton" />
    <string name="imagepreview">imagePreview</string>
    <string name="imagePreview" />
    <string name="ball_dribble">Ball Dribble</string>
    <string name="ball_tap">Ball Tap</string>
    <string name="waist_wrap">Waist Wrap</string>
    <string name="side_lunge_with_a_touch">Side Lunge With a Touch</string>
    <string name="back_lunge_with_a_pass_back">Back Lunge With a Pass Back</string>
    <string name="single_leg_roll">Single Leg Roll</string>
    <string name="rest">REST</string>
    <string name="start">Start</string>
    <string name="included_exercises">Included exercises:</string>

    <string name="countdown_timer">Countdown Timer</string>
    <string name="rest_timer">Rest Timer</string>
    <string name="settingIcon">settingicon</string>
    <string name="about_app">About App</string>

    <string name="in_secs">in Secs</string>
    <string name="pause">Pause</string>


</resources>