<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:orientation="horizontal"
    tools:context=".MenuActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="387dp"
        android:layout_height="69dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="W A R M  U P S"
        app:titleMarginStart="135dp"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/featured_exercise"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="372dp"
        android:layout_height="211dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="154dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dynamicbutton"
        android:scaleType="fitXY"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/dynamicicon"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="150dp"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dynamicbutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        app:srcCompat="@drawable/inplaceicon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="10dp"
        android:text="@string/whole_body_dynamic"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="86dp"
        android:text="@string/in_place"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="154dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dynamicbutton"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/withballicon" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="149dp"
        android:layout_height="102dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dynamicbutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/stretchingicon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:text="@string/with_ball"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="73dp"
        android:text="@string/stretching"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

</androidx.constraintlayout.widget.ConstraintLayout>