<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="4dp"
            android:text="@string/warm_ups"
            android:textSize="20sp"
            android:textStyle="bold"
            android:letterSpacing="0.2"
            android:textColor="@color/black"
            android:layout_marginStart="150dp"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/settingsbuttonicon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/iconsettings"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_toRightOf="@id/title"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/featured_exercise"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="NotSibling">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="parent" />

    </FrameLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/whole_body_dynamic"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wholebodydynamicButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/in_place"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inPlaceButton" />

    <ImageButton
        android:id="@+id/withBallButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="13dp"
        android:adjustViewBounds="true"

        android:contentDescription="@string/dynamicbutton"
        app:layout_constraintEnd_toStartOf="@+id/stretchingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/withballbuttonicon" />

    <ImageButton
        android:id="@+id/stretchingButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="13dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dynamicbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/withBallButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/stretchingbuttonicon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:text="@string/with_ball"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withBallButton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:text="@string/stretching"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretchingButton" />

    <ImageButton
        android:id="@+id/wholebodydynamicButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toStartOf="@+id/inPlaceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/wholebodybuttonicon" />

    <ImageButton
        android:id="@+id/inPlaceButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wholebodydynamicButton"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1"
        app:srcCompat="@drawable/inplacebuttonicon" />

</androidx.constraintlayout.widget.ConstraintLayout>