<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KneeStretchLeft">

    <TextView
        android:id="@+id/kneeStretchLeftTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="133dp"
        android:text="@string/knee_stretch_left_knee_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView6"
        android:layout_width="wrap_content"
        android:layout_height="376dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kneeStretchLeftTitle" />

    <TextView
        android:id="@+id/walkingLungeDescription"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et consectetur ante. Vivamus vulputate nibh eros, vel tempor magna posuere sed. Sed fermentum tortor tellus,"
        android:textAlignment="center"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView6" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:text="@string/startTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_text" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="160dp"
        android:text="@string/resetTextButton"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="147dp"
        android:text="@string/timerNumber"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walkingLungeDescription"
        tools:text="00:00"/>

</androidx.constraintlayout.widget.ConstraintLayout>