<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KneeStretch2">

    <TextView
        android:id="@+id/kneeStretch2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:text="@string/knee_stretch_left_knee2_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView5"
        android:layout_width="wrap_content"
        android:layout_height="376dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kneeStretch2Title" />

    <TextView
        android:id="@+id/kneeStretch2Description"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="38dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et consectetur ante. Vivamus vulputate nibh eros, vel tempor magna posuere sed. Sed fermentum tortor tellus,"
        android:textAlignment="center"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:text="@string/startTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_text" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="160dp"
        android:text="@string/resetTextButton"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="147dp"
        android:text="@string/timerNumber"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kneeStretch2Description"
        tools:text="00:00" />
</androidx.constraintlayout.widget.ConstraintLayout>